# qhantoom

./: .gitignore  Cargo.toml  LICENSE  README.md  out.ll  rustfmt.toml  test
.github/: FUNDING.yml
compiler/cqc/: Cargo.toml
compiler/cqc-back/: Cargo.toml
compiler/cqc-driver/: Cargo.toml
compiler/cqc-front/: Cargo.toml
compiler/cqc-middle/: Cargo.toml
compiler/qhantoom/: Cargo.toml  README.md
compiler/qhantoom-driver/: Cargo.toml  README.md
compiler/qhantoom-lab/: Cargo.toml  index.html  package.json  webpack.config.js
compiler/qhantoom-lab/src/runtime/: box.js  const.js  index.js
compiler/qhantoom-lab/src/runtime/lib/codemirror/mode/javascript/: javascript.js
compiler/qhantoom-lab/src/runtime/lib/codemirror/mode/qhantoom/: qhantoom.js
compiler/qhantoom-lab/src/runtime/ui/: dracula-theme.css  global.css  monokai-theme.css
compiler/qhantoom-lab/src/system/: compiler.rs  lib.rs
compiler/qhantoom-lab/src/system/util/: error.rs  mod.rs  print.rs
compiler/qhantoom-ui/: Cargo.toml
compiler/qhantoom/benches/: tokenizer.rs
compiler/qhantoom/src/: lib.rs  main.rs
compiler/qhantoom/src/back/: mod.rs
compiler/qhantoom/src/back/codegen/cranelift/: interface.rs  mod.rs
compiler/qhantoom/src/back/codegen/cranelift/aot/: codegen.rs  translator.rs
compiler/qhantoom/src/back/context/: builtin.rs  mod.rs  scope.rs
compiler/qhantoom/src/back/cranelift/: mod.rs
compiler/qhantoom/src/back/cranelift/aot/: codegen.rs  mod.rs  translator.rs
compiler/qhantoom/src/back/cranelift/jit/: codegen.rs  translator.rs
compiler/qhantoom/src/front/: mod.rs
compiler/qhantoom/src/front/analyzer/: analyzer.rs  checker.rs  context.rs  initcheck.rs  maincheck.rs  mod.rs  scope.rs  typecheck.rs
compiler/qhantoom/src/front/analyzer/checker/: mainchecker.rs  mod.rs  namechecker.rs  semacheck.rs  typechecker.rs
compiler/qhantoom/src/front/grammar/: grammar.lalrpop  mod.rs
compiler/qhantoom/src/front/interpreter/: interpreter.rs  mod.rs
compiler/qhantoom/src/front/interpreter/scope/: interface.rs  mod.rs  scopemap.rs
compiler/qhantoom/src/front/interpreter/value/: mod.rs  value.rs
compiler/qhantoom/src/front/parser/: _parser.rs  interface.rs  mod.rs  parser.rs  pp.rs  syntax.rs  tests.rs
compiler/qhantoom/src/front/parser/ast/: ast.rs  mod.rs  pp.rs  ty.rs
compiler/qhantoom/src/front/tokenizer/: interface.rs  mod.rs  tests.rs  tokenizer.rs
compiler/qhantoom/src/front/tokenizer/token/: interface.rs  mod.rs  token.rs
compiler/qhantoom/src/util/: ascii.rs  color.rs  constant.rs  error.rs  errors.rs  mod.rs  pack.rs  pathto.rs  reader.rs  session.rs  source.rs  span.rs  string.rs  symbol.rs  writer.rs
compiler/qhantoom/src/util/error/: report.rs  reporter.rs
compiler/qhantoomc/: Cargo.toml
compiler/qhantoomc/src/: lib.rs
compiler/qhantoomc/src/back/codegen/: codegen.rs  interface.rs  jit.rs  mod.rs  tests.rs  translator.rs
compiler/qhantoomc/src/back/codegen/aot/: aot.rs  mod.rs  translator.rs
compiler/qhantoomc/src/back/codegen/compiler/: codegen.rs  mod.rs  translator.rs
compiler/qhantoomc/src/back/codegen/context/: builtin.rs  mod.rs  scope.rs
compiler/qhantoomc/src/back/codegen/cranelift/: jit.rs  mod.rs
compiler/qhantoomc/src/back/codegen/jit/: jit.rs  mod.rs  translator.rs
compiler/qhantoomc/src/back/codegen/llvm/: context.rs  jit.rs  mod.rs
compiler/qhantoomc/src/front/: mod.rs
compiler/qhantoomc/src/front/analyzer/: maincheck.rs  mod.rs  tests.rs  typecheck.rs
compiler/qhantoomc/src/front/interpreter/: interpreter.rs  mod.rs  tests.rs
compiler/qhantoomc/src/front/interpreter/runtime/: mod.rs  runtime.rs  scope.rs
compiler/qhantoomc/src/front/interpreter/value/: mod.rs  value.rs
compiler/qhantoomc/src/front/parser/: interface.rs  mod.rs  parser.rs  tests.rs
compiler/qhantoomc/src/front/parser/ast/: ast.rs  mod.rs  pp.rs  ty.rs
compiler/qhantoomc/src/front/tokenizer/: interface.rs  mod.rs  tests.rs  tokenizer.rs
compiler/qhantoomc/src/front/tokenizer/token/: interface.rs  mod.rs  token.rs
compiler/qhantoomc/src/util/: ascii.rs  cstring.rs  error.rs  mod.rs  reader.rs  symbol.rs  writer.rs
samples/: simple.qh
samples/bench/: snippet.qh
samples/code/: _hello.qh  hello.qh
samples/draft/: _closure.qh  _program.qh  action.qh  closure.qh  ext.qh  function.qh  program.qh
samples/entry/: hello.qh  simple.qh
samples/fixtures/: binop.qh  fun.qh  loop.qh  while.qh
samples/structs/: structs.qh
samples/tests/: _call.qh  add.qh  assign.qh  binop.qh  (+8 more)
src/bootstrap/: Cargo.toml  README.md  cli.rs  cmd.rs  compile.rs  help.rs  lib.rs  repl.rs  util.rs
src/bootstrap/cmd/: cmd.rs  compile.rs  copyright.rs  exit.rs  help.rs  license.rs  mod.rs  repl.rs  version.rs
src/bootstrap/compiler/: compiler.rs  mod.rs
src/bootstrap/repl/: mod.rs  repl.rs
src/bootstrap/util/: interface.rs  mod.rs  reader.rs  timer.rs  user.rs  writer.rs
(+335 files in other folders)
