cargo-features = ["edition2021"]

[package]
description = "the back-end side of the code qhantoom compiler"
edition = "2021"
name = "cqc-back"
readme = "README.md"
version = "0.0.0"

[dependencies]
cranelift = "0.77.0"
cranelift-codegen = "0.77.0"
cranelift-jit = "0.77.0"
cranelift-module = "0.77.0"
cranelift-native = "0.77.0"
cranelift-object = "0.77.0"
cranelift-preopt = "0.77.0"
# TODO: should be used for errors
# ariadne = "0.1.3"
