[package]
edition = "2018"
name = "qhantoomc"
version = "0.1.0"

[lib]
doctest = false
name = "qhantoomc"
path = "src/lib.rs"

[dependencies]
cranelift = "0.77.0"
cranelift-codegen = "0.77.0"
cranelift-jit = "0.77.0"
cranelift-module = "0.77.0"
cranelift-native = "0.77.0"
cranelift-object = "0.77.0"
cranelift-preopt = "0.77.0"
