cargo-features = ["edition2021"]

[package]
edition = "2021"
name = "bootstrap"
version = "0.1.0"

[[bin]]
doctest = false
name = "bootstrap"
path = "bin/main.rs"

[lib]
doctest = false
name = "bootstrap"
path = "lib.rs"

[dependencies]
chrono = "0.4.19"
platform-info = "0.1.0"
qhantoomc = {path = "../../compiler/qhantoomc"}
qute = "0.0.13"
