cargo-features = ["edition2021"]

[package]
authors = ["monsieurbadia, iam@monsieurbadia.com"]
description = "a programming language under development"
edition = "2021"
name = "bootstrap"
readme = "README.md"
version = "0.0.0"

[[bin]]
doctest = false
name = "bootstrap"
path = "bin/main.rs"

[lib]
doctest = false
name = "bootstrap"
path = "lib.rs"

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
platform-info = "0.1.0"
qhantoomc = {path = "../../compiler/qhantoomc"}
qute = "0.0.13"
