cargo-features = ["edition2021"]

[package]
description = "a tool for qhantoom program"
edition = "2021"
name = "bootstrap"
version = "0.0.0"

[[bin]]
doctest = false
name = "bootstrap"
path = "bin/main.rs"
test = false

[lib]
doctest = false
name = "bootstrap"
path = "lib.rs"
test = false

[dependencies]
chrono = "0.4.19"
platform-info = "0.1.0"
qhantoom = {path = "../../compiler/qhantoom"}
qute = "0.0.13"
slowprint = "0.1.0"
